# Point-Cloud-player-with-Draco

./: .gitignore
Assets/: LSQuicTest.cs  StatusMonitor.cs  URPS.asset
Assets/Input/: Controls.cs  Controls.inputactions
Assets/Plugins/Android/: AndroidManifest.xml
Assets/PointClouds/: PCVFX.vfx
Assets/PointClouds/draco/: longdress2.drc  longdress3.drc
Assets/PointClouds/dracoLessSimple/: simple1.drc  simple3.drc
Assets/PointClouds/dracoSimplified/: simple1.drc  simple2.drc  simple3.drc
Assets/PointClouds/simplified/: simple1.ply  simple2.ply  simple3.ply
Assets/Prefabs/: DracoPlayer.prefab
Assets/Scenes/: Draco-BestHTTP.unity  Draco-Curl.unity  Draco-Picoquic.unity  Draco-RTC.unity  Draco-WebRequest.unity  DracoPlayer.unity  PointCloudPlayer.unity
Assets/Scripts/: AnimationFPSCounter.cs  AppLauncher.cs  DracoBestHTTP.cs  DracoCurl.cs  DracoPicoQuic.cs  DracoPlayer.cs  DracoQUIC.cs  DracoRTC-Backup  DracoRTC.cs  DracoToParticles.cs  DracoWebRequest.cs  FPSCounter.cs  OptimizedQUICDownloader.cs  SceneChanger.cs  SliceGraphicsChanger.cs  StatusMonitor.cs  TextCanvasScript.cs  UnityMainThreadDispatcher.cs  WebRTCCloudManager.cs  WebRTCDataTransfer.cs
Assets/Scripts/DTO/: DTOice.cs  DTOsdp.cs  DTOtype.cs  DTOwrapper.cs
Assets/Skybox/: SkyboxMat.mat
Assets/StreamingAssets/Basketball_PLY/Cam1/: 2022-07-22_15-52-41_0000.ply  2022-07-22_15-52-41_0001.ply  2022-07-22_15-52-41_0002.ply  2022-07-22_15-52-41_0003.ply  2022-07-22_15-52-41_0004.ply  2022-07-22_15-52-41_0005.ply  2022-07-22_15-52-41_0006.ply  (+1138 more)
Assets/StreamingAssets/Draco/: simple2.drc
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Assets/XR/Settings/: OpenXR Package Settings.asset
NativePlugin/: CMakeLists.txt  CMakeListsBKP.txt
NativePlugin/include/: LSQuicWrapper.h
NativePlugin/include/compat/sys/: types.h  uio.h
NativePlugin/src/: LSQuicWrapper.cpp
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+1148 files in other folders)
